updata jwm